--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "servor": "^3.1.0",
-    "snowpack": "^1.1.0"
+    "snowpack": "^1.1.0",
+    "typescript": "^3.7.5"
   }
 }
