chore: Enable type checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     // Required: Use module="ESNext" so that TS won't compile/disallow any ESM syntax.
     "module": "ESNext",
 
+    // Required for Preact type checks.
+    "moduleResolution": "Node",
+
     // <div /> -> h.createElement("div")
     "jsx": "react",
     "jsxFactory": "h",
