--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csz": "^1.2.0",
     "preact": "^10.2.1"
   },
   "devDependencies": {
